--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="ACERCA DE NOSOTROS">About</a>
+            <a class="nav-link js-scroll-trigger" href="ACERCA DE NOSOTROS">ACERCA DE NOSOTROS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#OFERTA EDUCATIVA">Services</a>
+            <a class="nav-link js-scroll-trigger" href="#OFERTA EDUCATIVA">OFERTA EDUCATIVA</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#CONTACTOS">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="#CONTACTOS">CONTACTOS</a>
           </li>
         </ul>
       </div>
