--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <header class="bg-primary text-white">
     <div class="container text-center">
       <h1>INSTITUTO TECNOLOGICO DE IGUALA </h1>
-      <p class="lead">A landing page template freshly redesigned for Bootstrap 4</p>
+      <p class="lead">CARRETERA NACIONAL IGUALA-TAXCO, ESQUINA PERIFERICO NORTE, 40030 IGUALA DE LA INDEPENDENCIA</p>
     </div>
   </header>
 
